# kart-rs

./: .gitignore  Cargo.toml
analyzer/: .gitignore  Cargo.toml  README.md
analyzer/src/: color.rs  lib.rs  reference.rs  util.rs
analyzer/src/screens/: intro.rs  loading.rs  match_result.rs  mod.rs  race.rs  race_result.rs  select_character.rs
analyzer/tests/: template.html  test.rs
analyzer/tests/outputs/: test_0.json  test_1.json  test_10.json  test_100.json  test_101.json  test_102.json  test_103.json  test_104.json  test_105.json  test_106.json  test_107.json  test_108.json  test_11.json  test_114.json  test_119.json  test_121.json  test_123.json  test_124.json  test_125.json  test_126.json  test_127.json  test_128.json  test_129.json  test_13.json  test_130.json  test_132.json  test_133.json  test_134.json  test_135.json  test_136.json  test_137.json  test_138.json  test_139.json  test_140.json  test_142.json  test_143.json  test_144.json  test_146.json  test_15.json  test_151.json  (+97 more)
emitter/: Cargo.toml
emitter/src/: lib.rs  poster.rs
examples/: intro_screens.rs  process_intro_screens.rs  static.rs
examples/training_data/: main.rs
src/: cli.rs  main.rs
src/lib/: color.rs  emit.rs  frame_process.rs  hasher.rs  lib.rs  reference.rs  stream.rs  util.rs
src/lib/screens/: intro.rs  loading.rs  main_menu.rs  match_result.rs  mod.rs  race.rs  race_result.rs  select_character.rs
stream/: Cargo.toml
stream/src/: device.rs  lib.rs
util/: Cargo.toml
util/src/: lib.rs
