[package]
name = "kart-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["analyzer", "emitter", "stream", "util"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
console = "0.15.4"
dialoguer = { features = ["fuzzy-select"], git = "https://github.com/mitsuhiko/dialoguer", rev = "0c8b5e5a93bb6ea467a488032aa47cbefa22a97c" }
image = { version = "0.24.6" }
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
strum_macros = "0.24.3"
analyzer = { path = "./analyzer" }
emitter = { path = "./emitter" }
stream = { path = "./stream" }

[dependencies]
analyzer = { workspace = true }
emitter = { workspace = true }
stream = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.0.32", features = ["derive"] }
image = { workspace = true }
serde_json = { workspace = true }
