[package]
name = "kart-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["analyzer", "emitter", "stream", "util"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
analyzer = { path = "./analyzer" }
chrono = { version = "0.4.23", features = ["serde"] }
console = "0.15.4"
dialoguer = { features = ["fuzzy-select"], git = "https://github.com/mitsuhiko/dialoguer", rev = "0c8b5e5a93bb6ea467a488032aa47cbefa22a97c" }
emitter = { path = "./emitter" }
image = { version = "0.24.6" }
lazy_static = "1.4.0"
log = { version = "0.4", features = ["kv_unstable"] }
log_err = "1.1.1"
pretty_assertions = "1.3.0"
rayon = { version = "1.6.1" }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
stream = { path = "./stream" }

[dependencies]
analyzer = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.0.32", features = ["derive"] }
emitter = { workspace = true }
image = { workspace = true }
log = { workspace = true }
log_err = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplelog = { version = "0.12.1", features = [] }
stream = { workspace = true }
