[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "generate_intro_references"

[dependencies]
image = { workspace = true }
image_hasher = "1.1.2"
lazy_static = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
