[package]
name = "emitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
rayon = { workspace = true }
reqwest = { version = "0.11.16", features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
analyzer = { workspace = true }
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["rt"] }

[dev-dependencies]
httpmock = "0.6.7"
