[package]
name = "stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = { workspace = true }
dialoguer = { workspace = true }
image = { workspace = true }
log = { workspace = true }
log_err = { workspace = true }
nokhwa = { version = "0.10", features = ["input-native"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
